# MLOpsProject

./: .dockerignore  .env  .flake8  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  secret.yaml  test.py
.github/workflows/: codecheck.yaml  prod.yml  tests.yml
data/raw/: webscraping.py
models/: baseline_model.pkl
scripts/: run_training.py
src/data/: loaders.py
src/features/: preprocess.py
src/models/: evaluate.py  persistence.py  train.py
