[project]

name = "mlopsproject"

version = "0.1.0"

description = "Add your description here"

readme = "README.md"

requires-python = ">=3.13"

dependencies = [

    "numpy>=2.4.1",

    "pandas>=3.0.0",

    "python-dotenv>=1.2.1",

    "pyyaml>=6.0.3",

    "requests>=2.32.5",

    "scikit-learn>=1.8.0",

]
 
[tool.pytest.ini_options]

testpaths = ["."]

python_files = ["test*.py", "*_test.py"]

python_functions = ["test_*"]
 